packages/fuel-indexer-tests/trybuild/fail_if_ident_not_defined_in_abi.stderr
error: Type with ident 'Ident { ident: "ThisIsNotDefinedInTheABI", span: #0 bytes(157..181) }' not defined in the ABI.
 --> trybuild/fail_if_ident_not_defined_in_abi.rs
  |
  | #[indexer(manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> trybuild/fail_if_ident_not_defined_in_abi.rs
  |
  | }
  |  ^ consider adding a `main` function to `$DIR/trybuild/fail_if_ident_not_defined_in_abi.rs`
